--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,14 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.6.1
     container_name: elasticsearch
     volumes:
-#      - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+      #### Uncomment if specific Elasticsearch configuration is required	
+      # - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
       - esdata1:/usr/share/elasticsearch/data
     ports:
       - "9200:9200"
       - "9300:9300"
     environment:
-      ES_JAVA_OPTS: "-Xmx512m -Xms512m"
+      ES_JAVA_OPTS: "-Xmx2g -Xms2g"
       cluster.name: "docker-cluster"
       bootstrap.memory_lock: "true"
       xpack.security.enabled: "false"
@@ -35,10 +36,11 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.6.1
     container_name: elasticsearch2
     volumes:
-#      - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+      #### Uncomment if specific Elasticsearch configuration is required	
+      # - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
       - esdata2:/usr/share/elasticsearch/data
     environment:
-      ES_JAVA_OPTS: "-Xmx512m -Xms512m"
+      ES_JAVA_OPTS: "-Xmx2g -Xms2g"
       cluster.name: "docker-cluster"
       bootstrap.memory_lock: "true"
       discovery.zen.ping.unicast.hosts: "elasticsearch"
@@ -81,7 +83,7 @@ services:
     ports:
       - "5001:5000"
     environment:
-      LS_JAVA_OPTS: "-Xmx512m -Xms512m"
+      LS_JAVA_OPTS: "-Xms1g -Xmx1g"
     networks:
       - elk
     depends_on:
