--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
     mem_limit: 1g
     cap_add:
       - IPC_LOCK
+    networks:
+      - elk
 
   elasticsearch2:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.6.1
@@ -56,6 +58,8 @@ services:
     mem_limit: 1g
     cap_add:
       - IPC_LOCK
+    networks:
+      - elk
 
   kibana:
     image: docker.elastic.co/kibana/kibana:5.6.1
@@ -64,6 +68,8 @@ services:
       - ./kibana/config/:/usr/share/kibana/config
     ports:
       - "5601:5601"
+    networks:
+      - elk
     depends_on:
       - elasticsearch
 
@@ -78,6 +84,8 @@ services:
       - "5001:5000"
     environment:
       LS_JAVA_OPTS: "-Xms1g -Xmx1g"
+    networks:
+      - elk
     depends_on:
       - elasticsearch
 
@@ -86,3 +94,7 @@ volumes:
     driver: local
   esdata2:
     driver: local
+
+networks:
+   elk:
+      driver: bridge
