--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,13 +1,36 @@
 input {
-	tcp {
-		port => 5000
-	}
+  kafka {
+       decorate_events => true
+       bootstrap_servers => "10.10.10.66:9092"
+       topics => ["congestion", "load"]
+  }
 }
 
-## Add your filters / logstash plugins configuration here
+filter {
+  json {
+    source => "message"
+  }
+  if [kafka][topic] == "congestion" {
+     mutate {
+        add_field => {"[@metadata][index]" => "realtime_congestion_info"}
+        add_field => {"[@metadata][document_type]" => "congestion"}
+     }
+  } else {
+     mutate {
+        add_field => {"[@metadata][index]" => "realtime_load_info"}
+        add_field => {"[@metadata][document_type]" => "cell_load"}
+     }
+  }
+  mutate {
+     remove_field => ["kafka"]
+  }
+}
 
 output {
-	elasticsearch {
-		hosts => "elasticsearch:9200"
-	}
+   elasticsearch {
+      action => "index"
+      hosts => "elasticsearch:9200"
+      index => "%{[@metadata][index]}"
+      document_type => "%{[@metadata][document_type]}"
+   }
 }
